# master-thesis

./: .gitignore  Your enquiry have been received.eml  skema.xlsx  state_generation.txt
code/: FindPNAPI.cmake  PetriNet.cpp  marking.cpp
code/petri/: .CMakeLists.txt.swp  CMakeLists.txt
code/petri/petri/: Descriptors.hpp  ForwardDecl.hpp  IO.hpp  Marking.hpp  Net.hpp
code/petri/src/: IO.cpp  Marking.cpp
code/petri/test/: test_petri.cpp
code/pnapi-4.02/: Makefile.am
code/pnapi-4.02/doc/templates/: parser-FORMAT-wrapper.cc  parser-FORMAT-wrapper.h
code/pnapi-4.02/src/: config.h  exception.cc  exception.h  parser-lola-wrapper.cc  parser-lola-wrapper.h  parser-owfn-wrapper.cc  parser-owfn-wrapper.h  parser-pn-wrapper.cc  parser-pn-wrapper.h  parser-pnml-wrapper.cc  parser-pnml-wrapper.h  parser-sa-wrapper.cc  parser-sa-wrapper.h  parser-woflan-wrapper.cc  parser-woflan-wrapper.h  pnapi-assert.h
code/pnapi-4.02/tests/testfiles/: bug13579.owfn  bug13990.1.owfn  bug13990.2.owfn  bug13990.3.owfn  bug14117.sa  bug14119.1.owfn  bug14119.2.owfn  bug14127.owfn  bug14128.1.owfn  bug14128.2.owfn  bug14206.lola  bug14208.1.owfn  bug14208.2.owfn  bug14335.owfn  bug14411-constraint.owfn  bug14411.owfn  bug14417.1.owfn  bug14417.2.owfn  error_parser_woflan_01.tpn  error_parser_woflan_02.tpn  error_parser_woflan_03.tpn  error_parser_woflan_04.tpn  error_parser_woflan_05.tpn  error_parser_woflan_06.tpn  prom-2_7.pnml  prom-ADtranslationAccordingToSpec.pnml  prom-BadStructure.pnml  prom-GoodModel.pnml  prom-GoodModel_artificialStartEndTasks.pnml  prom-NonFitting.pnml  prom-NonFittingModel_artificialStartEndTasks.pnml  prom-Onderzoek_voor_Behandeling.pnml  prom-OverlyGeneralModel.pnml  prom-OverlyPreciseModel_artificialStartEndTasks.pnml  prom-PetriNet.pnml  prom-PetriNet_split_onderzoek_behandeling.pnml  prom-Petrinet_diagnosis.pnml  prom-Petriy.pnml  prom-ReferenceModel.pnml  prom-eric.pnml  (+40 more)
code/pnapi-4.02/utils/: cdnf-lexic.cc  cdnf-lexic.ll  petri.conf.in
code/practice/boost_graph/: main.cpp  out  output
code/practice/friends/: main.cpp
code/practice/graphviz/: simple.gv
code/practice/io_manipulator/: main.cpp  output
practice/boost_graph/: exe  executable  main.cpp
